Minor updates to reflect current status

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<!--<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>-->
-							<h1 id="title">John Slankas</h1>
-							<span class="jobtitle">PhD Candidate</span>
+							<h1 id="title">John Slankas, PhD</h1>
+							<span class="jobtitle">Senior Research Scholar</span>
 							<span class="byline">North Carolina State University</span>
 							<span class="byline"><a href="mailto:john@slankas.net">john@slankas.net</a></span>
 						</div>
@@ -86,7 +86,8 @@
 								<h2>About Me</h2>
 							</header>
 							
-							<p align=left>Currently, I am PhD graduate student in Computer Science at North Carolina State University in Raleigh, NC.  My research focuses on finding access control policies in natural language text and implementing those policies in the technical environment (i.e., database or application).
+							<p align=left>Currently, I am a senior research scholar for the <a href="https://ncsu-las.org/>Laboratory for Analytic Sciences</a> at <a href="https://www.ncsu.edu/">North Carolina State University</a> in Raleigh, NC.</p>
+							<p>My PhD research focused on finding access control policies in natural language text and implementing those policies in the technical environment (i.e., database or application).
 							</p>
 							<p>Prior to my return to graduate school, I led several teams producing enterprise-wide intranet applications for the human resources and information security groups at Wachovia Corporation.
 							</p>
