--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<h2>About Me</h2>
 							</header>
 							
-							<p align=left>Currently, I am a senior research scholar for the <a href="https://ncsu-las.org/>Laboratory for Analytic Sciences</a> at <a href="https://www.ncsu.edu/">North Carolina State University</a> in Raleigh, NC.</p>
+							<p align=left>Currently, I am a senior research scholar for the <a href="https://ncsu-las.org/>Laboratory for Analytic Sciences"</a> at <a href="https://www.ncsu.edu/">North Carolina State University</a> in Raleigh, NC.</p>
 							<p>My PhD research focused on finding access control policies in natural language text and implementing those policies in the technical environment (i.e., database or application).
 							</p>
 							<p>Prior to my return to graduate school, I led several teams producing enterprise-wide intranet applications for the human resources and information security groups at Wachovia Corporation.
@@ -227,8 +227,9 @@
 							<header>
 								<h2>Teaching Experience</h2>
 							</header>
-							<h4>Course Instructor</h4>
+							<h4>Course Instructor / Adjunct Assistant Professor</h4>
 							<ul>
+							<li>Fall 2016 - CSC 515: Software Security (North Carolina State University)
 							<li>Spring 2011 - CSC 116: Introduction to Computing - Java (North Carolina State University)</li>
 							<li>Summer 1993 - CSC 430: Software Engineering (University of Arizona)</li>
 							</ul>
@@ -250,7 +251,7 @@
 								<h2>Education</h2>
 							</header>
 							<p>
-							Ph.D., Computer Science, <a href="http://ncsu.edu">North Carolina State University</a>, 2014 (expected)<br>
+							Ph.D., Computer Science, <a href="http://ncsu.edu">North Carolina State University</a>, 2015.  Advisor: <a href="http://collaboration.csc.ncsu.edu/laurie/">Laurie Williams</a><br>
 							M.S., Computer Science, <a href="http://arizona.edu">University of Arizona</a>, 1993<br>
 							B.S., Mathematics, <a href="http://nd.edu">University of Notre Dame</a>, 1992
 							</p>
