--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<h2>About Me</h2>
 							</header>
 							
-							<p align=left>Currently, I am a senior research scholar for the <a href="https://ncsu-las.org/>Laboratory for Analytic Sciences"</a> at <a href="https://www.ncsu.edu/">North Carolina State University</a> in Raleigh, NC.</p>
+							<p align=left>Currently, I am a senior research scholar for the <a href="https://ncsu-las.org/">Laboratory for Analytic Sciences</a> at <a href="https://www.ncsu.edu/">North Carolina State University</a> in Raleigh, NC.</p>
 							<p>My PhD research focused on finding access control policies in natural language text and implementing those policies in the technical environment (i.e., database or application).
 							</p>
 							<p>Prior to my return to graduate school, I led several teams producing enterprise-wide intranet applications for the human resources and information security groups at Wachovia Corporation.
