Removed extraneous char, add Changsung's paper

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 							</header>
 								<h4>Conferences, Workshops, and Symposiums</h4>
 								<ul>
-								<li>M. Riaz, J. Stallings, M. Singh, J. Slankas, L. Williams, "DIGS – A Framework for Discovering Goals for Security Requirements Engineering", 10th International Sympoisum on Emperical Software Engineering and Measurement (ESEM 2016), Ciudad Real, Spain, September 8-9, 2016, <a href="/papers/ESEM-2016-DIGS-paper.pdf">Paper</a>&nbsp;&nbsp;&nbsp;<a href="/papers/ESEM-2016-DIGS-presentation.pptx">Presentation</a> </li>
+								<li>C. Moon, S. Harenberg, J. Slankas, and N. Samatova, "Learning Contextual Embeddings for Knowledge Graph Completion" (2017). PACIS 2017 Proceedings. 248. <a href="http://aisel.aisnet.org/pacis2017/248">http://aisel.aisnet.org/pacis2017/248</a></li>
+								<li>M. Riaz, J. Stallings, M. Singh, J. Slankas,  andL. Williams, "DIGS – A Framework for Discovering Goals for Security Requirements Engineering", 10th International Sympoisum on Emperical Software Engineering and Measurement (ESEM 2016), Ciudad Real, Spain, September 8-9, 2016, <a href="/papers/ESEM-2016-DIGS-paper.pdf">Paper</a>&nbsp;&nbsp;&nbsp;<a href="/papers/ESEM-2016-DIGS-presentation.pptx">Presentation</a> </li>
 								<li>T. Barik, K. Lubick, J. Smith, J. Slankas, E. Murphy-Hill. Fuse: A Reproducible, Extendable, Internet-Scale Corpus of Spreadsheets. MSR 2015: 486-489</li>
 								<li>J. Slankas, X. Xiao, L. Williams, and T. Xie, "Relation Extraction for Inferring Access Control Rules from Natural Language Artifacts" , 2014 Annual Computer Security Applications Conference (ACSAC 2014), New Orleans, LA.</li>
 								<li>M. Riaz, J. Slankas, J. King, and L. Williams, "Using Templates to Elicit Implied Security Requirements from Functional Requirements − A Controlled Experiment", ACM / IEEE  8th International Symposium on Empirical Software Engineering and Measurement  (ESEM 2014), Torino, Italy, September 18-19, 2014</li>
