--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 							</header>
 							<p>
 							<ul>
-							<li><a href="http://irishwildcat.com">Personal Blog</a></li>
+							<!--<li><a href="http://irishwildcat.com">Personal Blog</a></li>-->
 							<li><a href="http://photos.irishwildcat.com">Personal Photos</a></li>
 							<p>
 							<li><a href="http://realsearchgroup.com">Realseachgroup - Software Engineering research at NCSU</a></li>
